Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "'scatter'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,30 +327,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "text": [],
-         "type": "scatter",
-         "uid": "440e93e2-4444-11e9-b9c3-3527be9ba746"
-        }
-       ],
-       "layout": {}
-      },
-      "text/html": [
-       "<div id=\"61da486a-3379-4f78-839d-9de7e1cb7492\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"61da486a-3379-4f78-839d-9de7e1cb7492\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"4413ba84-4444-11e9-b9c3-3527be9ba746\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"61da486a-3379-4f78-839d-9de7e1cb7492\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"61da486a-3379-4f78-839d-9de7e1cb7492\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"4413ba84-4444-11e9-b9c3-3527be9ba746\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'plotly' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-3e4fd5680bb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moffline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbar_trace_first_three_pops\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'plotly' is not defined"
+     ]
     }
    ],
    "source": [
