--- a/index.ipynb
+++ b/index.ipynb
@@ -297,12 +297,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-26-abcd7bde38f0>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-abcd7bde38f0>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    bar_trace_first_three_pops = {'type': 'bar', 'text': \"2891000\", \"2800000\", \"2581000\" }\u001b[0m\n\u001b[0m                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "text_values = ['Buenos Aires', 'Toronto', 'Pyeongchang']\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': \"2891000\", \"2800000\",  }"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': \"2891000\", \"2800000\", \"2581000\" }"
    ]
   },
   {
