Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,7 @@
    ],
    "source": [
     "text_values = ['Buenos Aires', 'Toronto', 'Pyeongchang']\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': \"2891000\", \"2800000\", \"2581000\" }"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': 2891000, 2800000, \"2581000\" }"
    ]
   },
   {
